# AtomUI

./: .gitignore  Atom UI.xmind  Atom_UI.code-workspace  CMakeLists.txt  README.md  platformio.ini
AE_PROJECT/: ATOM.aep
AE_PROJECT/ATOM_AME/: tmpAEtoAMEProject-ATOM.aep  tmpAEtoAMEProject-ATOM_1.aep  tmpAEtoAMEProject-ATOM_2.aep  tmpAEtoAMEProject-ATOM_3.aep  tmpAEtoAMEProject-ATOM_4.aep  tmpAEtoAMEProject-ATOM_5.aep  tmpAEtoAMEProject-合成 1.aep  tmpAEtoAMEProject-合成 1_1.aep
AE_PROJECT/Adobe After Effects 自动保存/: ATOM自动保存 1.aep
SQL/: SquareLine_Project.sll  SquareLine_Project.spj
squareline/: CMakeLists.txt  atom_ui.sll  atom_ui.spj  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
squareline/images/: ui_img_app_png.c  ui_img_battery_png.c  ui_img_follows_png.c  ui_img_link_png.c  ui_img_menu_png.c  ui_img_power_2_png.c  ui_img_settings_png.c  ui_img_time_png.c  ui_img_wifi_closed_png.c  ui_img_wifi_png.c
squareline/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
squareline/src/: ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_battery_png.c
src/: main.cpp
src/Common/: Common.cpp  Common.h
src/Common/FileManager/: FileManager.cpp  FileManager.h
src/Common/Log/: Log.cpp  Log.h
src/Common/MessageManager/: Account.cpp  Account.h  MessageManager.cpp  MessageManager.h  MessagePool.cpp  MessagePool.h  Publisher.cpp  Publisher.h  Subscriber.cpp  Subscriber.h
src/Common/Time/: Time.cpp  (+1 more)
src/Drivers/: Drivers.cpp  Drivers.h
src/indev/: indev.cpp  indev.h
src/ui/: app.cpp  app.h
temp/home/: home.cpp  home.h  home_events.h
(+158 files in other folders)
